--- a/TicTakToe.Game/TicTakToe.Game.csproj
+++ b/TicTakToe.Game/TicTakToe.Game.csproj
@@ -7,4 +7,8 @@
         <RootNamespace>TicTakToe.Game</RootNamespace>
     </PropertyGroup>
 
+    <ItemGroup>
+      <PackageReference Include="Microsoft.Extensions.DependencyInjection.Abstractions" Version="8.0.0-preview.7.23375.6" />
+    </ItemGroup>
+
 </Project>
