--- a/TicTakToe/TicTakToe.csproj
+++ b/TicTakToe/TicTakToe.csproj
@@ -9,7 +9,11 @@
     </PropertyGroup>
 
     <ItemGroup>
-        <ProjectReference Include="..\TicTakToe.Game\TicTakToe.Game.csproj"/>
+        <ProjectReference Include="..\TicTakToe.Game\TicTakToe.Game.csproj" />
+    </ItemGroup>
+
+    <ItemGroup>
+      <PackageReference Include="Microsoft.Extensions.DependencyInjection" Version="8.0.0-preview.7.23375.6" />
     </ItemGroup>
 
 </Project>
